language/move-prover/tests/sources/functional/friend_error.exp
Move prover returns: exiting with bytecode transformation errors
error: function with a friend cannot be declared as opaque

    ┌── tests/sources/functional/friend_error.move:14:5 ───
    │
 14 │     public fun g() {}
    │     ^^^^^^^^^^^^^^^^^
    │

error: function `TestFriendError::g` is called by other functions while it can only be called by its friend h

    ┌── tests/sources/functional/friend_error.move:14:5 ───
    │
 14 │     public fun g() {}
    │     ^^^^^^^^^^^^^^^^^
    │

error: function `TestFriendError::f` is called by other functions while it can only be called by its friend M::some_other_fun

   ┌── tests/sources/functional/friend_error.move:8:5 ───
   │
 8 │     public fun f() {}
   │     ^^^^^^^^^^^^^^^^^
   │
